Small addition to ensure images don't require horizontal scrolling on smaller screens.

--- a/mainStyle.css
+++ b/mainStyle.css
@@ -17,6 +17,12 @@
     font-style: normal;
 }
 
+img /*mobile-/low-resolution safe*/
+{
+    max-width: 100%;
+    height: auto;
+}
+
 body
 {
     font-family: 'isidoralight';
